--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "mysql": "^2.13.0",
+    "sequelize": "^3.30.4",
     "serve-favicon": "~2.3.0"
   }
 }
