--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+.env
+node_modules
+
 # Custom for Visual Studio
 *.cs     diff=csharp
 
