--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "mysql": "^2.13.0",
+    "path": "^0.12.7",
     "sequelize": "^3.30.4",
     "serve-favicon": "~2.3.0"
   }
